...
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            const LogoHeader(),
            const SizedBox(height: 64),
            CustomTextField(
              hintText: 'User Name',
              controller: _usernameController,
            ),
            const SizedBox(height: 16),
            CustomTextField(
              hintText: 'Password',
              isPassword: true,
              controller: _passwordController,
            ),
            const SizedBox(height: 32),
            BlocBuilder<IamBloc, IamState>(
              builder: (context, state) {
                return PrimaryButton(
                  text: 'Sign in',
                  isLoading: state is IamLoading,
                  onPressed: _onSignIn,
                );
              },
            ),
            const SizedBox(height: 16),
...
