...
                                  ? Theme.of(context).colorScheme.onSurface
                                  : Theme.of(context).colorScheme.secondary.withValues(alpha:0.3),
                              borderRadius: BorderRadius.circular(6),
                            ),
                            alignment: Alignment.center,
                            child: Text(
                              'Events',
                              style: TextStyle(
                                color: _selectedIndex == 1
                                    ? Theme.of(context).colorScheme.surface
                                    : Theme.of(context).colorScheme.tertiary,
                                fontSize: 12,
                                fontWeight: FontWeight.bold,
...
